fix: card alignment

--- a/src/app/(main)/globals.css
+++ b/src/app/(main)/globals.css
@@ -2908,16 +2908,16 @@ ul {
     }
 
     .detail-item {
-        justify-content: space-between;
+        justify-content: flex-start;
     }
 
     .label {
-        font-weight: 500;
+        font-weight: 700;
     }
 
     .value {
-        font-weight: 700;
-        text-align: right;
+        font-weight: 500;
+        text-align: left;
     }
 }
 
